*edk2-efishell-bin-2014 (04 Aug 2014)

  04 Aug 2014; Poncho <poncho@spahan.ch> +edk2-efishell-bin-2014.ebuild,
  -edk2-efishell-bin-9999.ebuild:
  sys-boot/edk2-efishell-bin: add stable version