@@ -1,1 +1,1 @@
-DIST Shell_Full.efi 771136 SHA256 ea5e763a8a5f9733dbf7c33ffa16a19e078c6af635b51d8457bc377a22106a8c SHA512 9f9e008bb8f586c2e6d80ce6205937cf31913e750b94a4f3005639179a33bf0a35f1a4207735f1d0a6547e7a72e470c5da05c93bf195abd784c38b78dcab9779 WHIRLPOOL 136297b7e3a200ff5e1598b8e3ccb14eeba042b0e7fd99dcca345741d705862727f32baf12cd4a739b259953bc73d7de0b89fb36de26a3584caba861acf57918
+DIST edk2-efishell-bin-2014.efi 771136 SHA256 ea5e763a8a5f9733dbf7c33ffa16a19e078c6af635b51d8457bc377a22106a8c SHA512 9f9e008bb8f586c2e6d80ce6205937cf31913e750b94a4f3005639179a33bf0a35f1a4207735f1d0a6547e7a72e470c5da05c93bf195abd784c38b78dcab9779 WHIRLPOOL 136297b7e3a200ff5e1598b8e3ccb14eeba042b0e7fd99dcca345741d705862727f32baf12cd4a739b259953bc73d7de0b89fb36de26a3584caba861acf57918
