@@ -1,4 +1,4 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
@@ -6,7 +6,8 @@ EAPI=5
 
 DESCRIPTION="EFI-Shell - provides native UDK implemenations of a UEFI Shell 2.0"
 HOMEPAGE="https://tianocore.github.io/"
-SRC_URI="https://svn.code.sf.net/p/edk2/code/branches/UDK${PV}/EdkShellBinPkg/FullShell/X64/Shell_Full.efi"
+SRC_URI="https://svn.code.sf.net/p/edk2/code/branches/UDK${PV}.SP1/EdkShellBinPkg/FullShell/X64/Shell_Full.efi \
+			-> ${P}.efi"
 
 LICENSE="intel-ucode"
 SLOT="0"
@@ -19,7 +20,7 @@ RDEPEND="${DEPEND}"
 S="${WORKDIR}"
 
 src_unpack() {
-	cp "${DISTDIR}"/Shell_Full.efi "${WORKDIR}"/shellx64.efi || die
+	cp "${DISTDIR}"/${P}.efi "${WORKDIR}"/shellx64.efi || die
 }
 
 src_install() {
